# ch32v307_basic_env

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  env.cmake  toolchain-riscv.cmake
LED_Blink/: CMakeLists.txt  Makefile  README.md  toolchain-riscv.cmake
LED_Blink/LIB/Peripheral/src/: ch32v30x_dbgmcu.c
LED_Blink/Ld/: Link.ld
LED_Blink/User/: ch32v30x_conf.h  main.c
LED_Blink/lib/: CMakeLists.txt
LED_Blink/lib/Core/: core_riscv.h
LED_Blink/lib/Peripheral/src/: ch32v30x_gpio.c  ch32v30x_usart.c
LED_Blink/user/: CMakeLists.txt  main.c
LED_Blink/user/Peripherals/inc/: ch32v30x_it.h
LED_Blink/user/Peripherals/src/: ch32v30x_it.c
docs/: pin_config.md
lib/: CMakeLists.txt
lib/Peripheral/inc/: ch32v30x.h  ch32v30x_adc.h  ch32v30x_eth.h  ch32v30x_flash.h  ch32v30x_fsmc.h  ch32v30x_gpio.h
lib/Peripheral/src/: ch32v30x_can.c  ch32v30x_eth.c  ch32v30x_flash.c  ch32v30x_fsmc.c  ch32v30x_i2c.c  ch32v30x_spi.c  ch32v30x_tim.c
tools/: setup_vscode.bat  setup_vscode.sh
user/: CMakeLists.txt
user/Application/inc/: chip_info.h
user/Application/src/: chip_info.c  main.c
user/BSP/inc/: system_ch32v30x.h
user/BSP/src/: syscalls.c  system_ch32v30x.c
user/HAL/inc/: hal.h  hal_adc.h  hal_can.h  hal_dma.h  hal_flash.h  hal_gpio.h  hal_i2c.h  hal_pwm.h  hal_rtc.h  hal_spi.h  hal_system.h  hal_timer.h  hal_uart.h  hal_wdg.h
user/HAL/src/: hal.c  hal_adc.c  hal_can.c  hal_dma.c  hal_flash.c  hal_gpio.c  hal_i2c.c  hal_pwm.c  hal_rtc.c  hal_spi.c  hal_system.c  hal_timer.c  hal_uart.c  hal_wdg.c
user/Peripherals/: README_interrupt.md
user/Peripherals/inc/: debug_config.h  dhcp_client.h  eth_demo.h  eth_led.h  led.h  net_protocols.h  usb_cdc_demo.h
user/Peripherals/src/: ch32v30x_it.c  dhcp_client.c  eth_demo.c  eth_led.c  led.c  net_protocols.c  usb_cdc_demo.c
